# cv-jd-matching

./: README.md  pyproject.toml  requirements.txt  run_streamlit.bat
app/: streamlit_app.py
configs/: default_weights.yaml  requirement_types.yaml
data/labelled/: cv_jd_labels.csv  human_review_annotation_100.csv  human_review_annotation_readme.md  human_review_sample_100.csv  human_review_sample_100_with_llm.csv  labeling_dataset_summary.md  llm_labels_sample_100.csv  requirement_labels.csv
datasets/original/: datasets.txt
datasets/results/: cv_jd_scores_100x100.csv  cv_jd_scores_100x100.xlsx  cv_jd_scores_100x100_summary.md
experiments/: build_custom_datasets.py  build_pair_scores.py  create_diverse_100x100_scores.py  create_labeling_dataset.py  normalize_custom_datasets.py  run_all_methods.py  score_small_all_methods.py
notebooks/: analysis.ipynb
reports/: all_methods_100_pairs.csv  all_methods_100_pairs_summary.md  streamlit_batch_scores_20260607_114131.csv  streamlit_batch_scores_20260607_114131.xlsx
src/: __init__.py  project_paths.py
src/data_loading/: __init__.py  cv_reader.py  jd_reader.py
src/evaluation/: __init__.py  error_analysis.py  metrics.py  run_evaluation.py
src/extraction/: __init__.py  cv_sections.py  jd_sections.py  requirement_extractor.py  text_utils.py
src/matching/: __init__.py  base.py  embedding_fulltext_matcher.py  embedding_model_matcher.py  embedding_section_matcher.py  llm_matcher.py  method_runner.py  requirement_level_matcher.py  supervised_matcher.py  tfidf_matcher.py
src/scoring/: __init__.py  calibration.py  (+2 more)
